--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-Django==1.10.3
-django-extensions==1.6.7
-https://static.dpaw.wa.gov.au/static/py/dpaw-utils/dist/dpaw-utils-0.3a11.tar.gz
+Django==1.10.7
+django-extensions==1.7.9
+git+https://github.com/parksandwildlife/dpaw-utils.git@0.3a16#egg=dpaw-utils
 Unipath==1.1
 Fabric==1.10.2
 jinja2==2.8
 dj-static==0.0.6
-django-debug-toolbar==1.5
-django-crispy-forms==1.6.0
+django-debug-toolbar==1.8
+django-crispy-forms==1.6.1
 xlrd==0.9.3
 xlutils==1.7.1
 xlwt==0.7.5
