--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,17 @@
 sudo: false
 language: python
 cache: pip
+dist: trusty
 python:
-    - "2.7"
-addons:
-    postgresql: "9.4"
+    - 2.7
+
 services:
     - postgresql
+addons:
+    postgresql: 9.5
+    apt:
+        packages:
+            - postgresql-9.5-postgis-2.3
 branches:
     only:
         - master
@@ -15,10 +20,13 @@ env:
         - SECRET_KEY=SecretKeyForTravis
         - DATABASE_URL="postgis://postgres@localhost:5432/travis_ci_test"
 install:
-    - psql -U postgres -c "create extension postgis"
+    - pip install --upgrade pip
+    - pip install --upgrade setuptools
     - pip install -r requirements.txt
+
 before_script:
-    - psql -c 'create database travis_ci_test;' -U postgres
+    - psql -c "create database travis_ci_test;" -U postgres
+    - psql -c "create extension postgis;" -U postgres -d travis_ci_test
     - python manage.py migrate --noinput
 script:
     - python manage.py test -k -v 0
