--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,16 @@
-Django==1.11.10
-django-extensions==2.0.0
-git+https://github.com/parksandwildlife/dpaw-utils.git@0.3a16#egg=dpaw-utils
-uWSGI==2.0.16
+psycopg2==2.7.4
+Django==2.0.3
+django-confy==1.0.4
+django-extensions==2.0.6
+uWSGI==2.0.17
+#git+https://github.com/parksandwildlife/dpaw-utils.git@0.3a16#egg=dpaw-utils
 Unipath==1.1
 jinja2==2.10
 dj-static==0.0.6
-django-crispy-forms==1.7.0
+django-crispy-forms==1.7.2
 xlrd==1.1.0
 xlutils==2.0.0
 xlwt==1.3.0
-openpyxl==2.5.0
+openpyxl==2.5.1
 webtemplate-dpaw==0.4.8
-coverage==3.7.1
-mixer==5.6.6
+mixer==6.0.1
