--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
+git+https://github.com/ropable/dpaw-utils.git
+#git+https://github.com/parksandwildlife/dpaw-utils.git@0.4#egg=dpaw-utils
 psycopg2==2.7.4
 Django==2.0.3
 django-confy==1.0.4
 django-extensions==2.0.6
 uWSGI==2.0.17
-#git+https://github.com/parksandwildlife/dpaw-utils.git@0.3a16#egg=dpaw-utils
 Unipath==1.1
 jinja2==2.10
 dj-static==0.0.6
