--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Django==2.0.4
 django-confy==1.0.4
 django-extensions==2.0.6
 uWSGI==2.0.17
+gevent==1.2.2
 Unipath==1.1
 jinja2==2.10
 dj-static==0.0.6
