--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,17 @@
-sudo: false
+sudo: required
 language: python
 cache: pip
 dist: trusty
 python:
-    - 3.5
+    - 3.6
 services:
     - postgresql
+    - docker
 addons:
-    postgresql: 9.5
+    postgresql: 9.6
     apt:
         packages:
-            - postgresql-9.5-postgis-2.3
+            - postgresql-9.6-postgis-2.3
 branches:
     only:
         - master
@@ -18,6 +19,7 @@ env:
     global:
         - SECRET_KEY=SecretKeyForTravis
         - DATABASE_URL="postgis://postgres@localhost:5432/travis_ci_test"
+sudo: true
 install:
     - pip install --upgrade pip
     - pip install --upgrade setuptools
@@ -29,3 +31,13 @@ before_script:
     - python manage.py migrate --noinput
 script:
     - python manage.py test -k -v 0
+before_deploy:
+    - wget https://github.com/openshift/source-to-image/releases/download/v1.1.9a/source-to-image-v1.1.9a-40ad911d-linux-amd64.tar.gz
+    - tar xvf source-to-image-v1.1.9a-40ad911d-linux-amd64.tar.gz
+    - ./s2i build -e SECRET_KEY=${SECRET_KEY} . dbcawa/s2i-django dbcawa/ibms:${TRAVIS_BRANCH}
+    - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+deploy:
+  provider: script
+  script: docker push dbcawa/ibms
+  on:
+    all_branches: true
