--- a/.travis.yml
+++ b/.travis.yml
@@ -19,15 +19,13 @@ env:
     global:
         - SECRET_KEY=SecretKeyForTravis
         - DATABASE_URL="postgis://postgres@localhost:5432/travis_ci_test"
-sudo: true
 install:
     - pip install --upgrade pip
     - pip install --upgrade setuptools
     - pip install -r requirements.txt
-
 before_script:
-    - psql -c "create database travis_ci_test;" -U postgres
-    - psql -c "create extension postgis;" -U postgres -d travis_ci_test
+    - psql -U postgres -c "create database travis_ci_test;"
+    - psql -U postgres -d travis_ci_test -c "create extension postgis;"
     - python manage.py migrate --noinput
 script:
     - python manage.py test -k -v 0
@@ -37,7 +35,7 @@ before_deploy:
     - ./s2i build -e SECRET_KEY=${SECRET_KEY} . dbcawa/s2i-django dbcawa/ibms:${TRAVIS_BRANCH}
     - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
 deploy:
-  provider: script
-  script: docker push dbcawa/ibms
-  on:
-    all_branches: true
+    provider: script
+    script: docker push dbcawa/ibms
+    on:
+        all_branches: true
