--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-git+git://github.com/dbca-wa/dpaw-utils@minimal#egg=dpaw-utils
-psycopg2-binary==2.7.4
-Django==2.0.4
+git+git://github.com/dbca-wa/dpaw-utils@minimal
+psycopg2-binary==2.7.5
+Django==2.0.6
 django-confy==1.0.4
 django-extensions==2.0.6
 gunicorn==19.8.1
@@ -13,3 +13,4 @@ xlwt==1.3.0
 openpyxl==2.5.3
 webtemplate-dbca==0.5.0
 mixer==6.0.1
+raven==6.9.0
