--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django-extensions==2.1.3
 django-dotenv==1.4.2
 dj-database-url==0.5.0
 gunicorn==19.9.0
+whitenoise==3.3.1
 jinja2==2.10
 django-crispy-forms==1.7.2
 xlrd==1.1.0
