--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
 git+git://github.com/dbca-wa/dbca-utils@1.0.0
-psycopg2-binary==2.7.5
-Django==2.1.5
-django-extensions==2.1.3
+psycopg2-binary==2.7.7
+Django==2.1.7
+django-extensions==2.1.5
 django-dotenv==1.4.2
 dj-database-url==0.5.0
 gunicorn==19.9.0
-whitenoise==3.3.1
-jinja2==2.10
+dj-static==0.0.6
 django-crispy-forms==1.7.2
 xlrd==1.1.0
 xlutils==2.0.0
