--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-git+git://github.com/dbca-wa/dbca-utils@1.0.0
-psycopg2-binary==2.8.3
-Django==2.2.10
-django-extensions==2.2.5
+Django==3.0.4
+psycopg2-binary==2.8.4
+dbca-utils==1.1.1
+django-extensions==2.2.6
 django-dotenv==1.4.2
 dj-database-url==0.5.0
 gunicorn==20.0.4
@@ -11,6 +11,6 @@ xlrd==1.2.0
 xlutils==2.0.0
 xlwt==1.3.0
 openpyxl==2.6.4
-git+git://github.com/dbca-wa/webtemplate@1.1.2
+webtemplate-dbca==1.2.0
 mixer==6.1.3
 sentry-sdk==0.13.5
