--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,21 +7,21 @@ license = "Apache-2.0"
 
 [tool.poetry.dependencies]
 python = "^3.7"
-Django = "3.0.7"
-psycopg2-binary = "^2.8.5"
-dbca-utils = "^1.1.1"
-django-extensions = "^2.2.9"
-django-dotenv = "^1.4.2"
-dj-database-url = "^0.5.0"
-gunicorn = "^20.0.4"
-dj-static = "^0.0.6"
+Django = "3.0.10"
+psycopg2-binary = "2.8.6"
+dbca-utils = "1.1.1"
+django-extensions = "3.0.8"
+django-dotenv = "1.4.2"
+dj-database-url = "0.5.0"
+gunicorn = "20.0.4"
+dj-static = "0.0.6"
 django-crispy-forms = "1.8.1"
 xlrd = "1.2.0"
 xlutils = "2.0.0"
 xlwt = "1.3.0"
 openpyxl = "2.6.4"
-webtemplate-dbca = "^1.2.1"
-sentry-sdk = "^0.15.0"
+webtemplate-dbca = "1.3.0"
+sentry-sdk = "0.17.8"
 
 [tool.poetry.dev-dependencies]
 mixer = "^6.1.3"
