--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,16 @@
 dist: bionic
-sudo: required
 language: python
 cache: pip
 python:
-    - 3.7
+    - "3.8"
 services:
     - postgresql
     - docker
 addons:
-    postgresql: "10"
+    postgresql: "11"
     apt:
         packages:
-            - gdal-bin
-            - postgresql-10-postgis-2.4
+            - postgresql-11-postgis-2.5
 branches:
     only:
         - master
@@ -22,10 +20,9 @@ env:
         - DATABASE_URL="postgis://postgres@localhost:5432/travis_ci_test"
 before_install:
     - docker build -t dbcawa/ibms .
-    - pip install --upgrade pip
     - pip install poetry
 install:
-    - poetry install --verbose --no-interaction --no-ansi
+    - poetry install --no-dev --no-interaction --no-ansi
 before_script:
     - psql -U postgres -c "create database travis_ci_test;"
     - psql -U postgres -d travis_ci_test -c "create extension postgis;"
