--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Ashley Felton <ashley.felton@dbca.wa.gov.au>"]
 license = "Apache-2.0"
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.9"
 Django = "3.1.6"
 psycopg2-binary = "2.8.6"
 dbca-utils = "1.1.1"
@@ -21,12 +21,12 @@ xlutils = "2.0.0"
 xlwt = "1.3.0"
 openpyxl = "2.6.4"
 webtemplate-dbca = "1.3.0"
-mixer = "^6.1.3"
+mixer = "6.1.3"
 
 [tool.poetry.dev-dependencies]
-ipython = "^7.20.0"
+ipython = "^7.23.0"
 ipdb = "^0.13.2"
 
 [build-system]
-requires = ["poetry>=0.12"]
+requires = ["poetry>=1.1.6"]
 build-backend = "poetry.masonry.api"
