--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,13 +15,14 @@ django-dotenv = "1.4.2"
 dj-database-url = "0.5.0"
 gunicorn = "20.1.0"
 dj-static = "0.0.6"
-django-crispy-forms = "1.11.2"
+django-crispy-forms = "1.12.0"
 xlrd = "2.0.1"
 xlutils = "2.0.0"
 xlwt = "1.3.0"
 openpyxl = "3.0.7"
-webtemplate-dbca = "1.3.1"
 mixer = "7.1.2"
+webtemplate-dbca = "1.4.2"
+crispy-bootstrap5 = "0.5"
 
 [tool.poetry.dev-dependencies]
 ipython = "^7.23.0"
