--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Install Poetry
         run: pip install poetry
       - name: Install dependencies
-        run: poetry install --no-dev --no-interaction --no-ansi
+        run: poetry config virtualenvs.create false && poetry install --no-dev --no-interaction --no-ansi
       - name: Run tests
         run: python manage.py test
         env:
