--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -36,10 +36,19 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.9.6'
+      - name: Install GDAL
+        run: |
+          sudo apt-add-repository ppa:ubuntugis/ubuntugis-unstable
+          sudo apt-get update
+          sudo apt-get install gdal-bin libgdal-dev
       - name: Install Poetry
-        run: pip install poetry
+        run: |
+          pip install --upgrade pip
+          pip install poetry
       - name: Install dependencies
-        run: poetry config virtualenvs.create false && poetry install --no-dev --no-interaction --no-ansi
+        run: |
+          poetry config virtualenvs.create false
+          poetry install --no-dev --no-interaction --no-ansi
       - name: Run tests
         run: python manage.py test
         env:
