--- a/kustomize/overlays/uat/ingress.yaml
+++ b/kustomize/overlays/uat/ingress.yaml
@@ -2,12 +2,17 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: ibms
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/use-regex: "false"
 spec:
   rules:
   - host: ibms-uat.dbca.wa.gov.au
     http:
       paths:
-      - pathType: ImplementationSpecific
+      - path: /
+        pathType: Prefix
         backend:
           service:
             name: ingress-ibms
