--- a/kustomize/overlays/uat/service.yaml
+++ b/kustomize/overlays/uat/service.yaml
@@ -11,7 +11,7 @@ spec:
     protocol: TCP
     targetPort: 42
   selector:
-    app: ibms
+    app: ibms-uat
 ---
 apiVersion: v1
 kind: Service
@@ -25,7 +25,7 @@ spec:
     protocol: TCP
     targetPort: 8080
   selector:
-    app: ibms
+    app: ibms-uat
 ---
 apiVersion: v1
 kind: Service
@@ -40,4 +40,4 @@ spec:
     protocol: TCP
     targetPort: 42
   selector:
-    workloadselector: ibms-db
+    workloadselector: ibms-db-uat
