--- a/kustomize/overlays/uat/statefulset_uat_patch.yaml
+++ b/kustomize/overlays/uat/statefulset_uat_patch.yaml
@@ -1,9 +1,16 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: ibms-db
+  name: ibms-db-statefulset
 spec:
+  serviceName: ibms-db-uat
+  selector:
+    matchLabels:
+      workloadselector: ibms-db-uat
   template:
+    metadata:
+      labels:
+        workloadselector: ibms-db-uat
     spec:
       containers:
       - name: ibms-db
