Add persistentvolumeclaim_prod_patch.yaml, move deployment image from base to overlays.

--- a/kustomize/overlays/prod/deployment_prod_patch.yaml
+++ b/kustomize/overlays/prod/deployment_prod_patch.yaml
@@ -15,7 +15,8 @@ spec:
     spec:
       containers:
       - name: ibms
-        imagePullPolicy: Always
+        image: dbcawa/ibms:2.6.5
+        imagePullPolicy: IfNotPresent
         env:
         - name: IBMS_URL
           value: "https://ibms-aks.dbca.wa.gov.au"
