--- a/kustomize/overlays/prod/kustomization.yaml
+++ b/kustomize/overlays/prod/kustomization.yaml
@@ -14,3 +14,4 @@ resources:
 patchesStrategicMerge:
 - deployment_prod_patch.yaml
 - statefulset_prod_patch.yaml
+- persistentvolumeclaim_prod_patch.yaml
