--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,10 +1,12 @@
 name: run-tests
 
 on:
+  # Triggers the workflow on push or pull request events but only for the master branch
   push:
     branches: [ master ]
   pull_request:
     branches: [ master ]
+
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -12,13 +14,14 @@ jobs:
   run_tests:
     name: Run Django Tests
     runs-on: ubuntu-latest
+    env:
+      DATABASE_URL: postgres://postgres:postgres@localhost:5432/postgres
     services:
       db:
-        image: postgis/postgis:13-3.1-alpine
+        image: postgres:13-alpine
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: github_actions
         ports:
           - 5432:5432
         options: --mount type=tmpfs,destination=/var/lib/postgresql/data --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
@@ -30,21 +33,27 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.9.6'
-      - name: Install GDAL
-        run: |
-          sudo apt-add-repository ppa:ubuntugis/ubuntugis-unstable
-          sudo apt-get update
-          sudo apt-get install gdal-bin libgdal-dev
-      - name: Install Poetry
-        run: |
-          pip install --upgrade pip
-          pip install poetry
+          python-version: 3.9.6
+      - name: Install poetry
+        uses: snok/install-poetry@v1.2.0
+        with:
+          version: 1.1.8
+          virtualenvs-create: true
+          virtualenvs-in-project: true
+      - name: Load cached venv
+        id: cached-poetry-dependencies
+        uses: actions/cache@v2
+        with:
+          path: .venv
+          key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
       - name: Install dependencies
+        run: poetry install
+        if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
+      - name: Run DB migrations
         run: |
-          poetry config virtualenvs.create false
-          poetry install --no-dev --no-interaction --no-ansi
+          source .venv/bin/activate
+          python manage.py migrate
       - name: Run tests
-        run: python manage.py test
-        env:
-          DATABASE_URL: postgis://postgres:postgres@localhost:5432/github_actions
+        run: |
+          source .venv/bin/activate
+          python manage.py test
