--- a/kustomize/base/persistentvolumeclaim.yaml
+++ b/kustomize/base/persistentvolumeclaim.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: ibms-db-data
+  name: ibms-pg14-data
 spec:
   accessModes:
   - ReadWriteOnce
