--- a/kustomize/base/statefulset.yaml
+++ b/kustomize/base/statefulset.yaml
@@ -15,15 +15,15 @@ spec:
         - mkdir -p /data/data; mkdir -p /data/archivedir; chown -R 999:999 /data
         volumeMounts:
         - mountPath: /data
-          name: ibms-db-data
+          name: ibms-pg14-data
       restartPolicy: Always
       volumes:
-      - name: ibms-db-data
+      - name: ibms-pg14-data
         persistentVolumeClaim:
-          claimName: ibms-db-data
+          claimName: ibms-pg14-data
       containers:
       - name: ibms-db
-        image: postgres:13-alpine
+        image: postgres:14-alpine
         args:
         - -c
         - max_connections=1000
@@ -36,10 +36,10 @@ spec:
           value: ibms
         volumeMounts:
         - mountPath: /var/lib/postgresql/data
-          name: ibms-db-data
+          name: ibms-pg14-data
           subPath: data
         - mountPath: /archivedir
-          name: ibms-db-data
+          name: ibms-pg14-data
           subPath: archivedir
         resources:
           requests:
