--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,10 +19,10 @@ xlrd = "2.0.1"
 xlutils = "2.0.0"
 xlwt = "1.3.0"
 openpyxl = "3.0.7"
-mixer = "7.1.2"
 webtemplate-dbca = "1.4.2"
 crispy-bootstrap5 = "0.5"
 whitenoise = {extras = ["brotli"], version = "^5.3.0"}
+mixer = "^7.2.1"
 
 [tool.poetry.dev-dependencies]
 ipython = "^7.23.0"
