--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "ibms"
-version = "2.7.0"
+version = "2.7.2"
 description = "Integrated Business Management System corporate application"
 authors = ["Ashley Felton <ashley.felton@dbca.wa.gov.au>"]
 license = "Apache-2.0"
@@ -8,7 +8,7 @@ license = "Apache-2.0"
 [tool.poetry.dependencies]
 python = "^3.9"
 Django = "3.2.15"
-psycopg2-binary = "2.9.1"
+psycopg2 = "2.9.4"
 dbca-utils = "1.1.1"
 django-extensions = "3.1.3"
 django-dotenv = "1.4.2"
