--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ webtemplate-dbca = "1.5.1"
 crispy-bootstrap5 = "0.5"
 whitenoise = {extras = ["brotli"], version = "^5.3.0"}
 mixer = "^7.2.1"
+django = "3.2.16"
 
 [tool.poetry.dev-dependencies]
 ipython = "^7.23.0"
