--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -68,6 +68,7 @@ jobs:
       #----------------------------------------------
       - name: Run tests
         run: |
+          source .venv/bin/activate
           python manage.py migrate
           python manage.py collectstatic
           python manage.py test
