--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -64,4 +64,5 @@ jobs:
       - name: Run tests
         run: |
           source .venv/bin/activate
+          python manage.py collectstatic
           python manage.py test
