--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ license = "Apache-2.0"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-django = "3.2.16"
+django = "3.2.17"
 psycopg2 = "2.9.4"
 dbca-utils = "1.1.1"
 django-extensions = "3.1.3"
@@ -21,7 +21,7 @@ xlwt = "1.3.0"
 openpyxl = "3.0.10"
 webtemplate-dbca = "1.5.1"
 crispy-bootstrap5 = "0.5"
-whitenoise = {extras = ["brotli"], version = "^5.3.0"}
+whitenoise = {version = "6.2.0", extras = ["brotli"]}
 mixer = "^7.2.1"
 
 [tool.poetry.dev-dependencies]
