--- a/kustomize/overlays/prod/service.yaml
+++ b/kustomize/overlays/prod/service.yaml
@@ -1,21 +1,6 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: ibms
-spec:
-  type: ClusterIP
-  clusterIP: None
-  ports:
-  - name: default
-    port: 42
-    protocol: TCP
-    targetPort: 42
-  selector:
-    app: ibms-prod
----
-apiVersion: v1
-kind: Service
-metadata:
   name: ibms-clusterip
 spec:
   type: ClusterIP
@@ -26,3 +11,4 @@ spec:
     targetPort: 8080
   selector:
     app: ibms-prod
+    variant: prod
