--- a/kustomize/overlays/prod/kustomization.yaml
+++ b/kustomize/overlays/prod/kustomization.yaml
@@ -1,6 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: ibms
 nameSuffix: -prod
 secretGenerator:
 - envs:
@@ -10,6 +9,7 @@ resources:
 - ../../base
 - service.yaml
 - ingress.yaml
+- pdb.yaml
 labels:
 - includeSelectors: true
   pairs:
