--- a/kustomize/overlays/prod/kustomization.yaml
+++ b/kustomize/overlays/prod/kustomization.yaml
@@ -2,9 +2,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 nameSuffix: -prod
 secretGenerator:
-- envs:
+- name: ibms-env
+  type: Opaque
+  envs:
   - .env
-  name: ibms-env
 resources:
 - ../../base
 - service.yaml
