--- a/kustomize/overlays/uat/deployment_patch.yaml
+++ b/kustomize/overlays/uat/deployment_patch.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: ibms
-        image: ghcr.io/dbca-wa/ibms:latest
+        image: ghcr.io/dbca-wa/ibms
         imagePullPolicy: Always
         env:
         - name: IBMS_URL
