--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "ibms"
-version = "2.8.1"
+version = "2.8.2"
 description = "Integrated Business Management System corporate application"
 authors = ["Ashley Felton <ashley.felton@dbca.wa.gov.au>"]
 license = "Apache-2.0"
@@ -27,6 +27,7 @@ mixer = "7.2.2"
 [tool.poetry.group.dev.dependencies]
 ipython = "^8.10.0"
 ipdb = "^0.13.11"
+pre-commit = "^3.5.0"
 
 [build-system]
 requires = ["poetry-core"]
