--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ openpyxl = "3.1.2"
 webtemplate-dbca = "1.6.0"
 whitenoise = {version = "6.6.0", extras = ["brotli"]}
 mixer = "7.2.2"
+tomli = "2.0.1"
 
 [tool.poetry.group.dev.dependencies]
 ipython = "^8.10.0"
