Set terminationGracePeriodSeconds value.

--- a/kustomize/base/deployment.yaml
+++ b/kustomize/base/deployment.yaml
@@ -61,3 +61,4 @@ spec:
               - ALL
           readOnlyRootFilesystem: false
       restartPolicy: Always
+      terminationGracePeriodSeconds: 180
