--- a/kustomize/overlays/uat/deployment_patch.yaml
+++ b/kustomize/overlays/uat/deployment_patch.yaml
@@ -28,3 +28,20 @@ spec:
             secretKeyRef:
               name: ibms-env-uat
               key: SECRET_KEY
+        - name: SENTRY_DSN
+          valueFrom:
+            secretKeyRef:
+              name: ibms-env-uat
+              key: SENTRY_DSN
+        - name: SENTRY_SAMPLE_RATE
+          valueFrom:
+            secretKeyRef:
+              name: ibms-env-uat
+              key: SENTRY_SAMPLE_RATE
+        - name: SENTRY_TRANSACTION_SAMPLE_RATE
+          valueFrom:
+            secretKeyRef:
+              name: ibms-env-uat
+              key: SENTRY_TRANSACTION_SAMPLE_RATE
+        - name: SENTRY_ENVIRONMENT
+          value: "uat"
