--- a/kustomize/base/deployment.yaml
+++ b/kustomize/base/deployment.yaml
@@ -34,24 +34,36 @@ spec:
           limits:
             memory: "2Gi"
             cpu: "1000m"
+        startupProbe:
+          httpGet:
+            path: /liveness
+            port: 8080
+            scheme: HTTP
+          initialDelaySeconds: 3
+          periodSeconds: 15
+          timeoutSeconds: 10
+          successThreshold: 1
+          failureThreshold: 3
         livenessProbe:
           httpGet:
             path: /liveness
             port: 8080
             scheme: HTTP
+          initialDelaySeconds: 0
           periodSeconds: 15
           successThreshold: 1
           failureThreshold: 3
-          timeoutSeconds: 5
+          timeoutSeconds: 10
         readinessProbe:
           httpGet:
             path: /readiness
             port: 8080
             scheme: HTTP
+          initialDelaySeconds: 0
           periodSeconds: 15
           successThreshold: 1
           failureThreshold: 3
-          timeoutSeconds: 5
+          timeoutSeconds: 10
         securityContext:
           runAsNonRoot: true
           privileged: false
