--- a/kustomize/base/deployment.yaml
+++ b/kustomize/base/deployment.yaml
@@ -31,14 +31,14 @@ spec:
           value: "Australia/Perth"
         resources:
           requests:
-            memory: "256Mi"
+            memory: "128Mi"
             cpu: "10m"
           limits:
             memory: "2Gi"
             cpu: "1000m"
         startupProbe:
           httpGet:
-            path: /liveness
+            path: /livez
             port: 8080
             scheme: HTTP
           initialDelaySeconds: 3
@@ -48,7 +48,7 @@ spec:
           failureThreshold: 3
         livenessProbe:
           httpGet:
-            path: /liveness
+            path: /livez
             port: 8080
             scheme: HTTP
           initialDelaySeconds: 0
@@ -58,7 +58,7 @@ spec:
           timeoutSeconds: 10
         readinessProbe:
           httpGet:
-            path: /readiness
+            path: /readyz
             port: 8080
             scheme: HTTP
           initialDelaySeconds: 0
