Added Kustomize resources: HorizontalPodAutoscaler for deployment workloads.

--- a/kustomize/overlays/prod/kustomization.yaml
+++ b/kustomize/overlays/prod/kustomization.yaml
@@ -16,6 +16,7 @@ labels:
       variant: prod
 patches:
   - path: deployment_patch.yaml
+  - path: deployment_hpa_patch.yaml
   - path: service_patch.yaml
 images:
   - name: ghcr.io/dbca-wa/ibms
