--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ package-mode = false
 [tool.poetry.dependencies]
 python = ">=3.11"
 django = "4.2.11"
-psycopg = {version = "3.1.19", extras = ["binary", "pool"]}
+psycopg = "3.2.1"
 dbca-utils = "2.0.2"
 django-extensions = "3.2.3"
 python-dotenv = "1.0.1"
@@ -21,7 +21,7 @@ xlrd = "2.0.1"  # TODO: deprecate
 xlutils = "2.0.0"  # TODO: deprecate
 xlwt = "1.3.0"  # TODO: deprecate
 openpyxl = "3.1.5"
-webtemplate-dbca = "1.7.0"
+webtemplate-dbca = "1.7.1"
 whitenoise = {version = "6.7.0", extras = ["brotli"]}
 mixer = "7.2.2"
 
