--- a/kustomize/base/deployment_hpa.yaml
+++ b/kustomize/base/deployment_hpa.yaml
@@ -3,8 +3,9 @@ kind: HorizontalPodAutoscaler
 metadata:
   name: ibms-deployment-hpa
 spec:
-  minReplicas: 1
-  maxReplicas: 3
+  # Set a min of 2 replicas in order to allow our PDB.
+  minReplicas: 2
+  maxReplicas: 10
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
