--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,20 @@ ipython = "^8.27.0"
 ipdb = "^0.13.13"
 pre-commit = "^3.8.0"
 
+# Reference: https://docs.astral.sh/ruff/configuration/
+[tool.ruff]
+line-length = 120
+
+[tool.ruff.lint]
+ignore = [
+  "E501", # Line too long
+  "E722", # Bare except
+]
+
+# Reference: https://www.djlint.com/docs/configuration/
+[tool.djlint]
+profile = "django"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
