--- a/kustomize/overlays/uat/deployment_patch.yaml
+++ b/kustomize/overlays/uat/deployment_patch.yaml
@@ -14,34 +14,17 @@ spec:
         app: ibms-uat
     spec:
       containers:
-      - name: ibms
-        env:
-        - name: IBMS_URL
-          value: "https://ibms-uat.dbca.wa.gov.au"
-        - name: DATABASE_URL
-          valueFrom:
-            secretKeyRef:
-              name: ibms-env-uat
-              key: DATABASE_URL
-        - name: SECRET_KEY
-          valueFrom:
-            secretKeyRef:
-              name: ibms-env-uat
-              key: SECRET_KEY
-        - name: SENTRY_DSN
-          valueFrom:
-            secretKeyRef:
-              name: ibms-env-uat
-              key: SENTRY_DSN
-        - name: SENTRY_SAMPLE_RATE
-          valueFrom:
-            secretKeyRef:
-              name: ibms-env-uat
-              key: SENTRY_SAMPLE_RATE
-        - name: SENTRY_TRANSACTION_SAMPLE_RATE
-          valueFrom:
-            secretKeyRef:
-              name: ibms-env-uat
-              key: SENTRY_TRANSACTION_SAMPLE_RATE
-        - name: SENTRY_ENVIRONMENT
-          value: "uat"
+        - name: ibms
+          env:
+            - name: IBMS_URL
+              value: "https://ibms-uat.dbca.wa.gov.au"
+            - name: DATABASE_URL
+              valueFrom:
+                secretKeyRef:
+                  name: ibms-env-uat
+                  key: DATABASE_URL
+            - name: SHAREPOINT_IBMS
+              valueFrom:
+                secretKeyRef:
+                  name: ibms-env-uat
+                  key: SHAREPOINT_IBMS
