Switch project to use uv as the package manager.

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,4 +1,4 @@
-name: "Run unit tests"
+name: 'Run unit tests'
 
 on:
   push:
@@ -31,36 +31,23 @@ jobs:
         uses: actions/setup-python@v5
         id: setup-python
         with:
-          python-version: "3.12"
+          python-version: '3.12'
       #----------------------------------------------
-      # Install & configure Poetry
+      # Install & configure uv
       #----------------------------------------------
-      - name: Install Poetry
-        uses: snok/install-poetry@v1
+      - name: Install the latest version of uv
+        uses: astral-sh/setup-uv@v5
         with:
-          virtualenvs-create: true
-          virtualenvs-in-project: true
-          installer-parallel: true
+          enable-cache: true
       #----------------------------------------------
-      # Load cached venv if cache exists
+      # Install project dependencies
       #----------------------------------------------
-      - name: Load cached venv
-        id: cached-poetry-dependencies
-        uses: actions/cache@v4
-        with:
-          path: .venv
-          key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}
-      #----------------------------------------------
-      # Install project dependencies if cache does not exist
-      #----------------------------------------------
-      - name: Install project dependencies
-        if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
-        run: poetry install --no-interaction --no-root
+      - name: Install dependencies
+        run: uv sync
       #----------------------------------------------
       # Run unit tests
       #----------------------------------------------
       - name: Run tests
         run: |
-          source .venv/bin/activate
-          python manage.py collectstatic
-          python manage.py test
+          uv run python manage.py collectstatic
+          uv run python manage.py test --noinput --failfast --verbosity 0
