Set automountServiceAccountToken: false in Kustomize resource definitions.

--- a/kustomize/base/deployment.yaml
+++ b/kustomize/base/deployment.yaml
@@ -84,3 +84,4 @@ spec:
             readOnlyRootFilesystem: false
       restartPolicy: Always
       terminationGracePeriodSeconds: 180
+      automountServiceAccountToken: false
