--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -27,6 +27,9 @@ jobs:
       #----------------------------------------------
       - name: Check out repository
         uses: actions/checkout@v4
+        id: checkout-repo
+        with:
+          fetch-depth: 0
       - name: Set up Python
         uses: actions/setup-python@v5
         id: setup-python
